# fastapi-starter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup.sh  tox.ini
.github/workflows/: lint.yml  release.yml  test.yml
requirements/: base.txt  dev.txt
src/: __init__.py  _logger.py  config.py  config_dev.py  main.py
src/core/: deps.py  router.py  schema.py  schemas.py  service.py
tests/: test_utils.py
