[metadata]
name = FastAPI_Starter
version = 1.0.0
url = 
license = MIT
description = "FastAPI Starter Project"
long_description = file: README.md
long_description_content_type = text/markdown
author = "Raihan Kabir"
classifiers=
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: Implementation

project_urls =
    Documentation = 

[options]
packages = find:
include_package_data = True
install_requires =
    python-dotenv==1.0.1
    pyairtable==2.3.3
    fastapi==0.110.2
    pydantic==2.7.1
    pydantic_core==2.18.2

mypy = LeadStoreAPI
ignore_missing_imports = True
